# qt-open-ui-chat-components

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
example/: CMakeLists.txt  Main.qml  MainWindow.cpp  MainWindow.h  main.cpp
ui/: CMakeLists.txt  ChatFrame.cpp  ChatFrame.h  ChatFrame.qml  ChatModel.cpp  ChatModel.h
